--- a/api/changelog.mdx
+++ b/api/changelog.mdx
@@ -1,12 +1,59 @@
 ---
-title: "更新日志"
-description: "更新内容介绍"
+title: "Changelog"
 ---
 
-## 更新时间
+## Changelog
 
-## 更新内容
+### v1.0.0 (2024-01-15)
+Initial release of the Vidu API with core video generation capabilities.
 
-1、增加\*\*大模型
+**Features:**
+- Text-to-video generation endpoint
+- Image-to-video transformation
+- Basic video customization options (duration, resolution)
+- Two AI models: Vidu Turbo and Vidu Pro
+- Task creation and querying interfaces
+- Comprehensive error handling and documentation
 
-2、增加\*\*\*\*\*
+### v1.1.0 (2024-02-20)
+Enhanced video generation capabilities and improved performance.
+
+**New Features:**
+- Added support for negative prompts
+- Introduced seed parameter for reproducible results
+- Extended video duration options
+- Improved image processing pipeline
+
+**Improvements:**
+- Faster video processing times
+- Enhanced video quality for both models
+- Better error messages and handling
+- Updated documentation with more examples
+
+### v1.2.0 (2024-03-10)
+Added advanced customization options and reference image support.
+
+**New Features:**
+- Support for first and last frame images
+- Reference image integration for consistent character/object appearance
+- Audio generation capability toggle
+- Aspect ratio customization options
+
+**Improvements:**
+- More robust image validation
+- Enhanced security measures
+- Better resource management
+- Additional error codes for new features
+
+### v1.2.1 (2024-03-25)
+Bug fixes and stability improvements.
+
+**Fixes:**
+- Resolved issue with image URL validation
+- Fixed rare cases of incorrect task status reporting
+- Addressed edge case in duration calculation
+
+**Improvements:**
+- Improved API response times
+- Enhanced documentation clarity
+- Better handling of concurrent requests
