--- a/overview/introduction.mdx
+++ b/overview/introduction.mdx
@@ -1,27 +1,33 @@
 ---
-title: " 产品介绍"
-description: "欢迎来到 Vidau AI 平台文档。"
+title: "Introduction to Vidu"
 ---
+#### Core Features
+Vidu is an advanced AI-powered video generation platform that enables users to create high-quality video content with cutting-edge artificial intelligence technology. Our platform offers:
 
-# 一、 概述与入门
-这部分的目标是让开发者快速了解你的API能做什么，并让他们在5分钟内完成第一个成功的API调用。
+- Text-to-video generation capabilities
+- Image-to-video transformation
+- Customizable video parameters (duration, resolution, aspect ratio)
+- Multiple AI models optimized for different use cases
+- High-quality output with efficient processing
 
-# API简介
+#### Target Users
+Our platform is designed for a wide range of users including:
+- Content creators seeking to enhance their storytelling
+- Marketing professionals who need engaging video assets
+- Educators wanting to create dynamic learning materials
+- Businesses aiming to streamline their video production workflows
+- Developers integrating AI video generation into their applications
 
-它是什么？ 用一两句话清晰说明API的核心功能和价值。
+### Getting Started
 
-它能做什么？ 列出主要的功能特性（例如：用户管理、支付处理、数据查询）。
+#### Registration and Login
+To begin using the Vidu platform, you'll need to create an account and log in. Visit our website to sign up and gain access to our video generation tools.
 
-目标用户是谁？ 明确说明API主要面向哪类开发者。
+#### Obtaining an API Key
+To utilize our API services, you'll need to generate an API key from your account dashboard. This key will authenticate your requests to our API endpoints.
 
-# 快速开始
+#### Making Your First API Call
+Once you have your API key, you can make your first API call by following our API documentation. Start with the basic video creation endpoint to experience the power of Vidu's AI video generation capabilities.
 
-“5分钟上手”指南：提供一个最简化的、步骤式的教程，引导开发者完成第一个API调用。
-
-## 核心步骤：
-
-注册/登录：如何获取账户。
-
-获取API密钥：如何找到或生成认证凭证（API Key, Secret等）。
-
-第一个API调用示例：提供一个最简单的、可立即运行的代码示例（如使用cURL），并展示预期的成功响应。
+### API Integration
+Our comprehensive API allows developers to seamlessly integrate Vidu's video generation capabilities into their own applications, workflows, and platforms. With well-documented endpoints and clear examples, getting started with API integration is straightforward.
