--- a/overview/models.mdx
+++ b/overview/models.mdx
@@ -1,10 +1,37 @@
 ---
-title: "模型介绍"
-description: "介绍系统支持的模型以及模型支持的功能"
+title: "Model Overview"
 ---
 
-# 图片模型
+## Model Overview
 
-# 视频模型
+Vidu offers several specialized AI models, each optimized for different types of video generation tasks. Choose the model that best fits your specific use case to achieve optimal results.
 
-# 数字人模型
+### Vidu Turbo
+Our standard model optimized for fast video generation while maintaining high quality. Ideal for:
+- Rapid prototyping
+- Quick content creation
+- Applications requiring fast turnaround times
+
+Key characteristics:
+- Fast processing speed
+- Good quality output
+- Cost-effective solution
+
+### Vidu Pro
+Our premium model offering the highest quality video generation. Perfect for:
+- Professional content creation
+- Commercial applications
+- Projects requiring the highest fidelity
+
+Key characteristics:
+- Superior video quality
+- Enhanced detail and realism
+- Advanced features and capabilities
+
+### Model Selection Guide
+When choosing a model, consider:
+1. **Quality Requirements**: For highest quality, choose Vidu Pro. For good quality with faster processing, choose Vidu Turbo.
+2. **Budget Considerations**: Vidu Turbo offers a more economical option for high-volume applications.
+3. **Time Constraints**: If you need videos generated quickly, Vidu Turbo is the better choice.
+
+Each model supports the same API interface, making it easy to switch between models based on your needs.
